--- a/src/apps/templates/system/protect/kasten/clusters/icekubes/secrets/aws.yaml
+++ b/src/apps/templates/system/protect/kasten/clusters/icekubes/secrets/aws.yaml
@@ -1,10 +1,12 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: k10secret-icekubes-de
+  name: icekubes-aws
   namespace: kasten-io
   labels:
     argocd.argoproj.io/instance: kasten
+    app.kubernetes.io/instance: kasten
+    app.kubernetes.io/name: kasten
 data:
   aws_access_key_id: ZGEzYWRmYzNjMWJiNGJmMTg4MGJkNDRmMTIyOTZkNDg=
   aws_secret_access_key: NmU2OGQ4Y2IyYWY4NGEzZjhiNTU4NDRkNmUzZjE1NWI=
