--- a/src/apps/templates/system/protect/kasten/clusters/icekubes/secrets/openstack.yaml
+++ b/src/apps/templates/system/protect/kasten/clusters/icekubes/secrets/openstack.yaml
@@ -1,10 +1,12 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: k10secret-icekubes-openstack
+  name: icekubes-openstack
   namespace: kasten-io
   labels:
     argocd.argoproj.io/instance: kasten
+    app.kubernetes.io/instance: kasten
+    app.kubernetes.io/name: kasten
 data:
   os_domain: RGVmYXVsdA==
   os_password: dkdkSFhDVzQ5UnQ4QnJmYURXVlNXa1ZhU0tnQ01Bbno=
