--- a/src/apps/templates/system/protect/policy.yaml
+++ b/src/apps/templates/system/protect/policy.yaml
@@ -1,30 +1,25 @@
 kind: Policy
 apiVersion: config.kio.kasten.io/v1alpha1
 metadata:
-  name: jeancloude-club-cartemembre-backup
+  name: system.protect
   namespace: kasten-io
   labels:
     argocd.argoproj.io/instance: kasten
+    app.kubernetes.io/instance: kasten
+    app.kubernetes.io/name: kasten
 spec:
-  frequency: "@hourly"
+  frequency: "@daily"
   retention:
-    hourly: 24
-    daily: 7
-    weekly: 4
-    monthly: 12
-    yearly: 7
+    daily: 4
+    weekly: 1
+    monthly: 1
+    yearly: 1
   selector:
     matchExpressions:
       - key: k10.kasten.io/appNamespace
         operator: In
         values:
-          - jeancloude-club-keycloak
-  selector:
-    matchExpressions:
-      - key: k10.kasten.io/appNamespace
-        operator: In
-        values:
-          - jeancloude-club-keycloak
+          - kasten-io
   actions:
     - action: backup
       backupParameters:
@@ -34,7 +29,7 @@ spec:
               version: v1beta1
               resource: ingresses
         profile:
-          name: k10locationprofile-icekubes-de
+          name: icekubes-de
           namespace: kasten-io
     - action: export
       exportParameters:
