--- a/src/apps/templates/system/protect/storageclass.yaml
+++ b/src/apps/templates/system/protect/storageclass.yaml
@@ -1,9 +1,11 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: csi-cinder-high-speed
+  name: csi-cinder-high-speed-k10-generic
   labels:
     argocd.argoproj.io/instance: kasten
+    app.kubernetes.io/instance: kasten
+    app.kubernetes.io/name: kasten
   annotations:
     storageclass.kubernetes.io/is-default-class: 'true'
     k10.kasten.io/forcegenericbackup: 'true'
