--- a/src/apps/templates/system/protect/kasten.yaml
+++ b/src/apps/templates/system/protect/kasten.yaml
@@ -15,7 +15,7 @@ spec:
     helm:
       values: |
         scc:
-          create: true
+          create: false
         auth:
           basicAuth:
             enabled: true
