--- a/src/apps/templates/system/protect/kasten.yaml
+++ b/src/apps/templates/system/protect/kasten.yaml
@@ -34,6 +34,9 @@ spec:
         prometheus:
           server:
             enabled: true
+            server:
+              securityContext:
+                runAsNonRoot: false
             persistentVolume:
               enabled: true
         grafana:
