--- a/src/apps/templates/system/protect/kasten.yaml
+++ b/src/apps/templates/system/protect/kasten.yaml
@@ -14,8 +14,10 @@ spec:
     chart: k10
     helm:
       values: |
+        rbac:
+          create: true
         scc:
-          create: false
+          create: true
         auth:
           basicAuth:
             enabled: true
@@ -37,12 +39,19 @@ spec:
             server:
               securityContext:
                 runAsNonRoot: false
+                runAsUser: 0
+                runAsGroup: 0
+                fsGroup: 0
             persistentVolume:
               enabled: true
         grafana:
           enabled: false
         persistence:
           enabled: true
+        services:
+          securityContext:
+            runAsUser: 0
+            fsGroup: 0
         injectKanisterSidecar:
           enabled: true
           namespaceSelector:
