refactor(kasten): disable scc

--- a/src/apps/templates/system/protect/kasten.yaml
+++ b/src/apps/templates/system/protect/kasten.yaml
@@ -17,7 +17,7 @@ spec:
         rbac:
           create: true
         scc:
-          create: true
+          create: false
         auth:
           basicAuth:
             enabled: true
