fix(kasten): fix

--- a/src/apps/templates/system/protect/kasten/clusters/icekubes/profiles/infrastructure/openstack.yml
+++ b/src/apps/templates/system/protect/kasten/clusters/icekubes/profiles/infrastructure/openstack.yml
@@ -1,7 +1,7 @@
 kind: Profile
 apiVersion: config.kio.kasten.io/v1alpha1
 metadata:
-  name: icekubes
+  name: icekubes-infrastructure-openstack
   namespace: kasten-io
   labels:
     argocd.argoproj.io/instance: kasten
