--- a/src/apps/templates/system/protect/policy.yaml
+++ b/src/apps/templates/system/protect/policy.yaml
@@ -1,25 +1,13 @@
-kind: Policy
 apiVersion: config.kio.kasten.io/v1alpha1
+kind: Policy
 metadata:
-  name: system.protect
+  name: k10-disaster-recovery-policy
   namespace: kasten-io
   labels:
     argocd.argoproj.io/instance: kasten
     app.kubernetes.io/instance: kasten
     app.kubernetes.io/name: kasten
 spec:
-  frequency: "@daily"
-  retention:
-    daily: 4
-    weekly: 1
-    monthly: 1
-    yearly: 1
-  selector:
-    matchExpressions:
-      - key: k10.kasten.io/appNamespace
-        operator: In
-        values:
-          - kasten-io
   actions:
     - action: backup
       backupParameters:
@@ -29,13 +17,17 @@ spec:
               version: v1beta1
               resource: ingresses
         profile:
-          name: icekubes-de
+          name: icekubes-location-de
           namespace: kasten-io
-    - action: export
-      exportParameters:
-        frequency: "@hourly"
-        profile:
-          name: k10locationprofile-icekubes-de
-          namespace: kasten-io
-        exportData:
-          enabled: true
+  retention:
+    daily: 1
+    hourly: 4
+    monthly: 1
+    weekly: 1
+    yearly: 1
+  selector:
+    matchExpressions:
+      - key: k10.kasten.io/appNamespace
+        operator: In
+        values:
+          - kasten-io
