--- a/src/apps/templates/system/protect/applications/kasten.yaml
+++ b/src/apps/templates/system/protect/applications/kasten.yaml
@@ -14,6 +14,10 @@ spec:
     chart: k10
     helm:
       values: |
+        statefulSet:
+          enabled: true
+          annotations:
+            k10.kasten.io/forcegenericbackup: 'true'
         rbac:
           create: true
         scc:
