--- a/src/apps/templates/system/expose/applications/traefik.yaml
+++ b/src/apps/templates/system/expose/applications/traefik.yaml
@@ -14,6 +14,9 @@ spec:
     chart: traefik
     helm:
       values: |
+        ingressClass:
+          enabled: true
+          isDefaultClass: true
         providers:
           kubernetesIngress:
             publishedService:
