--- a/src/apps/templates/system/protect/applications/kasten/clusters/icekubes/profiles/infrastructure/openstack.yml
+++ b/src/apps/templates/system/protect/applications/kasten/clusters/icekubes/profiles/infrastructure/openstack.yml
@@ -13,7 +13,7 @@ spec:
       secretType: OpenStackAccount
       secret:
         apiVersion: v1
-        kind: secret
+        kind: Secret
         name: icekubes-openstack
         namespace: kasten-io
     openStack:
