--- a/src/apps/templates/system/deliver/namespaces/argo-cd.yaml
+++ b/src/apps/templates/system/deliver/namespaces/argo-cd.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: traefik
+  name: argo-cd
   annotations:
     k10.kasten.io/forcegenericbackup: 'true'
   labels:
-    argocd.argoproj.io/instance: traefik
-    app.kubernetes.io/instance: traefik
-    app.kubernetes.io/name: traefik
+    argocd.argoproj.io/instance: argo-cd
+    app.kubernetes.io/instance: argo-cd
+    app.kubernetes.io/name: argo-cd
     k10/injectKanisterSidecar: 'true'
