refactor(kasten): platform

--- a/src/apps/templates/platform/applications/external-dns.yaml
+++ b/src/apps/templates/platform/applications/external-dns.yaml
@@ -9,7 +9,7 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: external-dns
-  project: system.expose
+  project: platform
   source:
     chart: external-dns
     helm:
