--- a/src/apps/templates/platform/applications/traefik.yaml
+++ b/src/apps/templates/platform/applications/traefik.yaml
@@ -9,7 +9,7 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: traefik
-  project: system.expose
+  project: platform
   source:
     chart: traefik
     helm:
