--- a/src/apps/templates/platform/applications/argo-cd.yaml
+++ b/src/apps/templates/platform/applications/argo-cd.yaml
@@ -9,7 +9,7 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: argo-cd
-  project: system.deliver
+  project: platform
   source:
     path: src/charts/argo-cd
     repoURL: https://github.com/constructions-incongrues/club.jeancloude.k8s.git
