--- a/src/apps/templates/platform/policies/external-dns.yaml
+++ b/src/apps/templates/platform/policies/external-dns.yaml
@@ -32,7 +32,7 @@ spec:
       exportParameters:
         frequency: "@daily"
         profile:
-          name: icekubes-location-de
+          name: icekubes-location-objectstore-de
           namespace: kasten-io
         exportData:
           enabled: true
