--- a/src/apps/templates/platform/policies/cluster-scoped-resources-backup.yaml
+++ b/src/apps/templates/platform/policies/cluster-scoped-resources-backup.yaml
@@ -26,11 +26,11 @@ spec:
       backupParameters:
         filters: {}
         profile:
-          name: icekubes-location-de
+          name: icekubes-location-objectstore-de
           namespace: kasten-io
     - action: export
       exportParameters:
         frequency: "@hourly"
         profile:
-          name: icekubes-location-de
+          name: icekubes-location-objectstore-de
           namespace: kasten-io
