--- a/src/apps/templates/jeancloude.club/policies/rocketchat.yaml
+++ b/src/apps/templates/jeancloude.club/policies/rocketchat.yaml
@@ -1,14 +1,14 @@
 kind: Policy
 apiVersion: config.kio.kasten.io/v1alpha1
 metadata:
-  name: keycloak-backup
+  name: rocketchat-backup
   namespace: kasten-io
   labels:
-    argocd.argoproj.io/instance: keycloak
-    app.kubernetes.io/instance: keycloak
-    app.kubernetes.io/name: keycloak
+    argocd.argoproj.io/instance: rocketchat
+    app.kubernetes.io/instance: rocketchat
+    app.kubernetes.io/name: rocketchat
 spec:
-  frequency: "@hourlu"
+  frequency: "@hourly"
   retention:
     hourly: 12
     daily: 4
@@ -20,7 +20,7 @@ spec:
       - key: k10.kasten.io/appNamespace
         operator: In
         values:
-          - keycloak
+          - rocketchat
   actions:
     - action: backup
       backupParameters:
