--- a/src/apps/templates/jeancloude.club/project.yaml
+++ b/src/apps/templates/jeancloude.club/project.yaml
@@ -2,14 +2,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
-  name: club.jeancloude.cartemembre
+  name: jeancloude.club
   namespace: argo-cd
   # Finalizer that ensures that project is not deleted until it is not referenced by any application
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   # Project description
-  description: 
+  description:
 
   # Allow manifests to deploy from any Git repos
   sourceRepos:
