--- a/src/apps/templates/platform/applications/kasten.yaml
+++ b/src/apps/templates/platform/applications/kasten.yaml
@@ -63,4 +63,9 @@ spec:
               k10/injectKanisterSidecar: 'true'
     repoURL: https://charts.kasten.io/
     targetRevision: 4.5.6
-  syncPolicy: {}
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: false
+    syncOptions:
+      - CreateNamespace=true
