fix(kasten): kanister ignore foundationdb test data

--- a/src/apps/templates/platform/applications/kanister-blueprints.yaml
+++ b/src/apps/templates/platform/applications/kanister-blueprints.yaml
@@ -16,6 +16,7 @@ spec:
     targetRevision: 0.71.0
     directory:
       recurse: true
+      exclude: 'foundationdb/local_cluster.yaml'
   syncPolicy:
     automated:
       prune: true
