fix(kasten): namespaces

--- a/src/apps/templates/jeancloude.club/namespaces/keycloak.yaml
+++ b/src/apps/templates/jeancloude.club/namespaces/keycloak.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: keycloak
+  name: club-jeancloude-keycloak
   annotations:
     k10.kasten.io/forcegenericbackup: 'true'
   labels:
