--- a/src/apps/templates/jeancloude.club/namespaces/nextcloud.yaml
+++ b/src/apps/templates/jeancloude.club/namespaces/nextcloud.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: nextcloud
+  name: club-jeancloude-nextcloud
   annotations:
     k10.kasten.io/forcegenericbackup: 'true'
   labels:
