--- a/src/apps/templates/icekubes.yaml
+++ b/src/apps/templates/icekubes.yaml
@@ -2,13 +2,13 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: icekubes
-  namespace: argo-cd
+  namespace: platform-argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: argo-cd
+    namespace: platform-argocd
   project: platform
   source:
     path: src/apps/
