--- a/src/apps/templates/jeancloude.club/policies/nextcloud.yaml
+++ b/src/apps/templates/jeancloude.club/policies/nextcloud.yaml
@@ -2,7 +2,7 @@ kind: Policy
 apiVersion: config.kio.kasten.io/v1alpha1
 metadata:
   name: nextcloud-backup
-  namespace: kasten-io
+  namespace: platform-kasten
   labels:
     argocd.argoproj.io/instance: nextcloud
     app.kubernetes.io/instance: nextcloud
@@ -20,7 +20,7 @@ spec:
       - key: k10.kasten.io/appNamespace
         operator: In
         values:
-          - nextcloud
+          - club-jeancloude-nextcloud
   actions:
     - action: backup
       backupParameters:
@@ -34,6 +34,6 @@ spec:
         frequency: "@hourly"
         profile:
           name: icekubes-location-objectstore-de
-          namespace: kasten-io
+          namespace: platform-kasten
         exportData:
           enabled: true
