--- a/src/apps/templates/platform/applications/external-dns.yaml
+++ b/src/apps/templates/platform/applications/external-dns.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: external-dns
-  namespace: argo-cd
+  namespace: platform-argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
