--- a/src/apps/templates/platform/applications/kasten.yaml
+++ b/src/apps/templates/platform/applications/kasten.yaml
@@ -2,13 +2,13 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: kasten
-  namespace: argo-cd
+  namespace: platform-argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: kasten-io
+    namespace: platform-kasten
   project: platform
   source:
     chart: k10
