--- a/src/apps/templates/platform/applications/kasten/clusters/icekubes/secrets/aws.yaml
+++ b/src/apps/templates/platform/applications/kasten/clusters/icekubes/secrets/aws.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: icekubes-aws
-  namespace: kasten-io
+  namespace: platform-kasten
   labels:
     argocd.argoproj.io/instance: kasten
     app.kubernetes.io/instance: kasten
