--- a/src/apps/templates/platform/namespaces/kasten-io.yaml
+++ b/src/apps/templates/platform/namespaces/kasten-io.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: kasten-io
+  name: platform-kasten
   annotations:
     k10.kasten.io/forcegenericbackup: 'true'
   labels:
