--- a/src/apps/templates/platform/policies/cluster-scoped-resources-backup.yaml
+++ b/src/apps/templates/platform/policies/cluster-scoped-resources-backup.yaml
@@ -2,7 +2,7 @@ kind: Policy
 apiVersion: config.kio.kasten.io/v1alpha1
 metadata:
   name: cluster-scoped-resources-backup
-  namespace: kasten-io
+  namespace: platform-kasten
   labels:
     argocd.argoproj.io/instance: kasten
     app.kubernetes.io/instance: kasten
@@ -20,17 +20,17 @@ spec:
       - key: k10.kasten.io/appNamespace
         operator: In
         values:
-          - kasten-io-cluster
+          - platform-kasten-cluster
   actions:
     - action: backup
       backupParameters:
         filters: {}
         profile:
           name: icekubes-location-objectstore-de
-          namespace: kasten-io
+          namespace: platform-kasten
     - action: export
       exportParameters:
         frequency: "@hourly"
         profile:
           name: icekubes-location-objectstore-de
-          namespace: kasten-io
+          namespace: platform-kasten
