--- a/src/apps/templates/platform/policies/disaster-recovery.yaml
+++ b/src/apps/templates/platform/policies/disaster-recovery.yaml
@@ -2,7 +2,7 @@ apiVersion: config.kio.kasten.io/v1alpha1
 kind: Policy
 metadata:
   name: k10-disaster-recovery-policy
-  namespace: kasten-io
+  namespace: platform-kasten
   labels:
     argocd.argoproj.io/instance: kasten
     app.kubernetes.io/instance: kasten
@@ -18,7 +18,7 @@ spec:
               resource: ingresses
         profile:
           name: icekubes-location-objectstore-de
-          namespace: kasten-io
+          namespace: platform-kasten
   retention:
     daily: 1
     hourly: 4
@@ -30,4 +30,4 @@ spec:
       - key: k10.kasten.io/appNamespace
         operator: In
         values:
-          - kasten-io
+          - platform-kasten
