--- a/src/apps/templates/platform/policies/traefik.yaml
+++ b/src/apps/templates/platform/policies/traefik.yaml
@@ -2,7 +2,7 @@ kind: Policy
 apiVersion: config.kio.kasten.io/v1alpha1
 metadata:
   name: traefik-backup
-  namespace: kasten-io
+  namespace: platform-kasten
   labels:
     argocd.argoproj.io/instance: traefik
     app.kubernetes.io/instance: traefik
@@ -33,6 +33,6 @@ spec:
         frequency: "@daily"
         profile:
           name: icekubes-location-objectstore-de
-          namespace: kasten-io
+          namespace: platform-kasten
         exportData:
           enabled: true
