--- a/src/charts/argocd/Chart.yaml
+++ b/src/charts/argocd/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
-name: argo-cd
+name: argocd
 version: 1.0.0
 dependencies:
-  - name: argo-cd
+  - name: argocd
     version: 3.29.5
     repository: https://argoproj.github.io/argo-helm
