--- a/src/charts/argocd/values.yaml
+++ b/src/charts/argocd/values.yaml
@@ -1,4 +1,4 @@
-argo-cd:
+argocd:
   installCRDs: true
   dex:
     enabled: false
@@ -11,15 +11,15 @@ argo-cd:
           name: stable
           url: https://charts.helm.sh/stable
         - type: helm
-          name: argo-cd
+          name: argocd
           url: https://argoproj.github.io/argo-helm
-      url: https://argo-cd.jeancloude.club
+      url: https://argocd.jeancloude.club
     ingress:
       enabled: true
       annotations:
-        external-dns.alpha.kubernetes.io/hostname: argo-cd.jeancloude.club
+        external-dns.alpha.kubernetes.io/hostname: argocd.jeancloude.club
       hosts:
-        - argo-cd.jeancloude.club
+        - argocd.jeancloude.club
       configManagementPlugins: |
         - name: kustomized-helm
           init:
