fix(kasten): objectstore

--- a/src/apps/templates/platform/applications/kasten/clusters/icekubes/profiles/location/de.yaml
+++ b/src/apps/templates/platform/applications/kasten/clusters/icekubes/profiles/location/de.yaml
@@ -19,7 +19,7 @@ spec:
     objectStore:
       endpoint: https://s3.de.cloud.ovh.net
       name: kasten
-      path: icekubes
+      path: net.pastis-hosting.icekubes
       objectStoreType: S3
       pathType: Directory
       region: DE
