--- a/src/apps/templates/jeancloude.club/project.yaml
+++ b/src/apps/templates/jeancloude.club/project.yaml
@@ -17,7 +17,7 @@ spec:
 
   # Only permit applications to deploy to the guestbook namespace in the same cluster
   destinations:
-  - namespace: '*'
+    namespace: '*'
     server: https://kubernetes.default.svc
 
   # Enables namespace orphaned resource monitoring.
