--- a/src/apps/templates/platform/project.yaml
+++ b/src/apps/templates/platform/project.yaml
@@ -3,7 +3,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
   name: platform
-  namespace: platform-argocd
+  namespace: argo-cd
   # Finalizer that ensures that project is not deleted until it is not referenced by any application
   finalizers:
     - resources-finalizer.argocd.argoproj.io
@@ -17,7 +17,7 @@ spec:
 
   # Only permit applications to deploy to the guestbook namespace in the same cluster
   destinations:
-    namespace: '*'
+  - namespace: '*'
     server: https://kubernetes.default.svc
 
   # Enables namespace orphaned resource monitoring.
