--- a/src/apps/templates/platform/policies/traefik.yaml
+++ b/src/apps/templates/platform/policies/traefik.yaml
@@ -19,7 +19,7 @@ spec:
       - key: k10.kasten.io/appNamespace
         operator: In
         values:
-          - traefik
+          - platform-traefik
   actions:
     - action: backup
       backupParameters:
