--- a/src/apps/templates/platform/applications/traefik.yaml
+++ b/src/apps/templates/platform/applications/traefik.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: traefik
+    namespace: platform-traefik
   project: platform
   source:
     chart: traefik
