--- a/src/apps/templates/platform/policies/external-dns.yaml
+++ b/src/apps/templates/platform/policies/external-dns.yaml
@@ -1,7 +1,7 @@
 kind: Policy
 apiVersion: config.kio.kasten.io/v1alpha1
 metadata:
-  name: external-dns-backup
+  name: platform-external-dns-backup
   namespace: platform-kasten
   labels:
     argocd.argoproj.io/instance: external-dns
