--- a/src/apps/templates/platform/policies/kube.yaml
+++ b/src/apps/templates/platform/policies/kube.yaml
@@ -1,7 +1,7 @@
 kind: Policy
 apiVersion: config.kio.kasten.io/v1alpha1
 metadata:
-  name: kube-backup
+  name: platform-kube-backup
   namespace: platform-kasten
   labels:
     argocd.argoproj.io/instance:  platform-argocd
