--- a/src/apps/templates/platform/policies/traefik.yaml
+++ b/src/apps/templates/platform/policies/traefik.yaml
@@ -1,7 +1,7 @@
 kind: Policy
 apiVersion: config.kio.kasten.io/v1alpha1
 metadata:
-  name: traefik-backup
+  name: platform-traefik-backup
   namespace: platform-kasten
   labels:
     argocd.argoproj.io/instance: traefik
