--- a/src/apps/templates/jeancloude.club/policies/keycloak.yaml
+++ b/src/apps/templates/jeancloude.club/policies/keycloak.yaml
@@ -1,7 +1,7 @@
 kind: Policy
 apiVersion: config.kio.kasten.io/v1alpha1
 metadata:
-  name: keycloak-backup
+  name: club-jeancloude-keycloak-backup
   namespace: platform-kasten
   labels:
     argocd.argoproj.io/instance: keycloak
