--- a/src/apps/templates/jeancloude.club/policies/nextcloud.yaml
+++ b/src/apps/templates/jeancloude.club/policies/nextcloud.yaml
@@ -1,7 +1,7 @@
 kind: Policy
 apiVersion: config.kio.kasten.io/v1alpha1
 metadata:
-  name: nextcloud-backup
+  name: club-jeancloude-nextcloud-backup
   namespace: platform-kasten
   labels:
     argocd.argoproj.io/instance: nextcloud
