--- a/src/apps/templates/jeancloude.club/policies/rocketchat.yaml
+++ b/src/apps/templates/jeancloude.club/policies/rocketchat.yaml
@@ -1,7 +1,7 @@
 kind: Policy
 apiVersion: config.kio.kasten.io/v1alpha1
 metadata:
-  name: rocketchat-backup
+  name: club-jeancloude-rocketchat-backup
   namespace: platform-kasten
   labels:
     argocd.argoproj.io/instance: rocketchat
