--- a/src/apps/templates/jeancloude.club/applications/keycloak.yaml
+++ b/src/apps/templates/jeancloude.club/applications/keycloak.yaml
@@ -34,6 +34,6 @@ spec:
   syncPolicy:
     automated:
       prune: true
-      selfHeal: false
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
