--- a/src/apps/templates/platform/applications/argocd.yaml
+++ b/src/apps/templates/platform/applications/argocd.yaml
@@ -17,6 +17,6 @@ spec:
   syncPolicy:
     automated:
       prune: true
-      selfHeal: false
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
