--- a/src/apps/templates/platform/applications/kanister-blueprints.yaml
+++ b/src/apps/templates/platform/applications/kanister-blueprints.yaml
@@ -20,6 +20,6 @@ spec:
   syncPolicy:
     automated:
       prune: true
-      selfHeal: false
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
