--- a/src/apps/templates/platform/applications/traefik/dashboard.yaml
+++ b/src/apps/templates/platform/applications/traefik/dashboard.yaml
@@ -2,6 +2,12 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: dashboard
+  namespace: platform-traefik
+  labels:
+    app.kubernetes.io/component: traefik
+    app.kubernetes.io/instance: traefik
+    app.kubernetes.io/name: traefik
+    argocd.argoproj.io/instance: traefik
 spec:
   entryPoints:
     - web
