fix(traefik): disable default dashboard route

--- a/src/apps/templates/platform/applications/traefik.yaml
+++ b/src/apps/templates/platform/applications/traefik.yaml
@@ -17,6 +17,9 @@ spec:
         ingressClass:
           enabled: true
           isDefaultClass: true
+        ingressRoute:
+          dashboard:
+            enabled: false
         providers:
           kubernetesIngress:
             publishedService:
