fix(kasten): dashboard

--- a/src/apps/templates/platform/applications/kasten.yaml
+++ b/src/apps/templates/platform/applications/kasten.yaml
@@ -14,8 +14,10 @@ spec:
     chart: k10
     helm:
       values: |
-        apigateway:
-          serviceResolver: endpoint
+        externalGateway:
+          create: true
+        # apigateway:
+        #   serviceResolver: endpoint
         rbac:
           create: true
         scc:
