--- a/src/apps/templates/platform/applications/kasten.yaml
+++ b/src/apps/templates/platform/applications/kasten.yaml
@@ -14,6 +14,8 @@ spec:
     chart: k10
     helm:
       values: |
+        ingress:
+          create: true
         apigateway:
           serviceResolver: endpoint
         externalGateway:
