--- a/src/apps/templates/platform/policies/kasten-disaster-recovery.yaml
+++ b/src/apps/templates/platform/policies/kasten-disaster-recovery.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   actions:
     - action: backup
-
+      backupParameters:
         profile:
           name: icekubes-location-objectstore-de
           namespace: platform-kasten
