--- a/src/apps/templates/jeancloude.club/applications/keycloak.yaml
+++ b/src/apps/templates/jeancloude.club/applications/keycloak.yaml
@@ -14,6 +14,9 @@ spec:
     chart: keycloak
     helm:
       values: |
+        commonAnnotations:
+          k10.kasten.io/forcegenericbackup: 'true'
+          kanister.kasten.io/blueprint: postgres-bp
         proxyAddressForwarding: true
         postgresql:
           postgresqlPassword: keycloak
