--- a/src/apps/templates/jeancloude.club/applications/keycloak.yaml
+++ b/src/apps/templates/jeancloude.club/applications/keycloak.yaml
@@ -14,6 +14,10 @@ spec:
     chart: keycloak
     helm:
       values: |
+        auth:
+          createAdminUser: true
+          adminUser: admin
+          adminPassword: admin
         commonAnnotations:
           k10.kasten.io/forcegenericbackup: 'true'
         proxyAddressForwarding: true
