--- a/src/apps/templates/platform/applications/traefik.yaml
+++ b/src/apps/templates/platform/applications/traefik.yaml
@@ -34,6 +34,6 @@ spec:
   syncPolicy:
     automated:
       prune: true
-      selfHeal: true
+      selfHeal: false
     syncOptions:
       - CreateNamespace=true
