--- a/src/apps/templates/jeancloude.club/applications/keycloak.yaml
+++ b/src/apps/templates/jeancloude.club/applications/keycloak.yaml
@@ -33,6 +33,12 @@ spec:
           hostname: cartemembre.jeancloude.club
           annotations:
             external-dns.alpha.kubernetes.io/hostname: cartemembre.jeancloude.club
+    plugin:
+      name: argocd-lovely-plugin
+      env:
+        - name: LOVELY_HELM_PATCH
+          value: |
+            [{ "op": "add", "path": "/spec/containers/0/env", "value": { "action": "add", "name": "cluster, "value": "{{name}}" } }]
     repoURL: https://charts.bitnami.com/bitnami
     targetRevision: 5.2.8
   syncPolicy:
