--- a/src/charts/argocd/values.yaml
+++ b/src/charts/argocd/values.yaml
@@ -2,6 +2,17 @@ argo-cd:
   installCRDs: true
   dex:
     enabled: true
+  repoServer:
+    volumes:
+      - name: custom-tools
+        emptyDir: {}
+    initContainers:
+      - name: argocd-lovely-plugin-download
+        image: ghcr.io/crumbhole/argocd-lovely-plugin:stable
+        imagePullPolicy: Always
+        volumeMounts:
+          - mountPath: /custom-tools
+            name: custom-tools
   server:
     extraArgs:
       - --insecure
@@ -14,14 +25,13 @@ argo-cd:
           name: argocd
           url: https://argoproj.github.io/argo-helm
       url: https://argocd.jeancloude.club
-      configManagementPlugins: |
-        - name: kustomized-helm
+      configManagementPlugins: |-
+        - name: argocd-lovely-plugin
           init:
-            command: ["/bin/sh", "-c"]
-            args: ["helm dependency build || true"]
+            command: ["argocd-lovely-plugin"]
+            args: ["init"]
           generate:
-            command: ["/bin/sh", "-c"]
-            args: ["echo \"$HELM_VALUES\" | helm template . --name-template $ARGOCD_APP_NAME --namespace $ARGOCD_APP_NAMESPACE $HELM_ARGS -f - --include-crds > all.yaml && kustomize build"]
+            command: ["argocd-lovely-plugin"]
     ingress:
       enabled: true
       hosts:
