--- a/src/apps/templates/jeancloude.club/applications/nextcloud.yaml
+++ b/src/apps/templates/jeancloude.club/applications/nextcloud.yaml
@@ -40,9 +40,13 @@ spec:
             k10.kasten.io/forcegenericbackup: 'true'
         redis:
           enabled: true
-          persistence:
-            enabled: false
           architecture: replication
+          master:
+            persistence:
+              enabled: false
+          replica:
+            persistence:
+              enabled: false
           volumePermissions:
             enabled: true
         nextcloud:
