--- a/src/apps/templates/jeancloude.club/applications/keycloak.yaml
+++ b/src/apps/templates/jeancloude.club/applications/keycloak.yaml
@@ -23,6 +23,7 @@ spec:
           postgresqlPassword: keycloak
           postgresqlPostgresPassword: keycloak
           persistence:
+            enabled: true
             size: 1Gi
           volumePermissions:
             enabled: true
