--- a/src/apps/templates/jeancloude.club/applications/nextcloud.yaml
+++ b/src/apps/templates/jeancloude.club/applications/nextcloud.yaml
@@ -25,6 +25,7 @@ spec:
           enabled: true
           postgresqlPassword: keycloak
           postgresqlPostgresPassword: keycloak
+          usePasswordFile: true
           persistence:
             enabled: true
             size: 1Gi
