--- a/src/apps/templates/platform/policies/kasten-disaster-recovery.yaml
+++ b/src/apps/templates/platform/policies/kasten-disaster-recovery.yaml
@@ -8,18 +8,19 @@ metadata:
     app.kubernetes.io/instance: kasten
     app.kubernetes.io/name: kasten
 spec:
-  actions:
-    - action: backup
-      backupParameters:
-        profile:
-          name: icekubes-location-objectstore-de
-          namespace: platform-kasten
+  frequency: "@daily"
   retention:
     daily: 1
     hourly: 4
     monthly: 1
     weekly: 1
     yearly: 1
+  actions:
+    - action: backup
+      backupParameters:
+        profile:
+          name: icekubes-location-objectstore-de
+          namespace: platform-kasten
   selector:
     matchExpressions:
       - key: k10.kasten.io/appNamespace
