--- a/src/apps/templates/jeancloude.club/applications/keycloak.yaml
+++ b/src/apps/templates/jeancloude.club/applications/keycloak.yaml
@@ -14,6 +14,20 @@ spec:
     chart: keycloak
     helm:
       values: |
+        extraEnvVars:
+          - name: KEYCLOAK_EXTRA_ARGS
+            value: "-Dkeycloak.import=/config/realm.json"
+        extraVolumeMounts:
+          - name: config
+            mountPath: "/config"
+            readOnly: true
+        extraVolumes:
+          - name: config
+            configMap:
+              name: keycloak-realm
+              items:
+              - key: "realm.json"
+                path: "realm.json"
         auth:
           createAdminUser: true
           adminUser: admin
