--- a/src/apps/templates/jeancloude.club/applications/keycloak/configmap.yaml
+++ b/src/apps/templates/jeancloude.club/applications/keycloak/configmap.yaml
@@ -8,7 +8,7 @@ metadata:
     app.kubernetes.io/instance: keycloak
     app.kubernetes.io/name: keycloak
 data:
-  realm.json: |
+  realms.json: |
     {
       "id": "jeancloude.club",
       "realm": "jeancloude.club",
