--- a/src/apps/templates/jeancloude.club/applications/keycloak.yaml
+++ b/src/apps/templates/jeancloude.club/applications/keycloak.yaml
@@ -56,6 +56,6 @@ spec:
   syncPolicy:
     automated:
       prune: true
-      selfHeal: true
+      selfHeal: false
     syncOptions:
       - CreateNamespace=true
