--- a/src/apps/templates/platform/applications/kasten.yaml
+++ b/src/apps/templates/platform/applications/kasten.yaml
@@ -37,6 +37,8 @@ spec:
         prometheus:
           server:
             enabled: true
+            baseURL: /kasten/prometheus/
+            prefixURL: /kasten/prometheus/
             persistentVolume:
               enabled: false
         grafana:
