--- a/src/apps/templates/platform/applications/prometheus.yaml
+++ b/src/apps/templates/platform/applications/prometheus.yaml
@@ -13,7 +13,13 @@ spec:
   source:
     chart: kube-prometheus
     helm:
-      values: ""
+      values:
+        prometheus:
+          ingress:
+            enabled: true
+            hostname: prometheus.jeancloude.club
+            annotations:
+              external-dns.alpha.kubernetes.io/hostname: club.jeancloude.club
     repoURL: https://charts.bitnami.com/bitnami
     targetRevision: 6.6.1
   syncPolicy:
